--- a/frontend/index.html
+++ b/frontend/index.html
@@ -8,7 +8,7 @@
     <link href="css/main.css" rel="stylesheet">
     <link href="css/icons.css" rel="stylesheet">
 </head>
-<body ng-app="biblio" ng-controller="BoardController as vm" ng-include="'templates/board.html'">
+<body ng-app="psbio" ng-controller="BoardController as vm" ng-include="'templates/board.html'">
 
 <script src="node_modules/angular/angular.js"></script>
 <script src="node_modules/angular-aria/angular-aria.js"></script>
@@ -16,13 +16,15 @@
 <script src="node_modules/angular-material/angular-material.js"></script>
 <script src="node_modules/angular-ui-router/release/angular-ui-router.js"></script>
 <script src="node_modules/angular-material-data-table/dist/md-data-table.js"></script>
+<script src="node_modules/angular-cookies/angular-cookies.js"></script>
 <script src="js/app.js"></script>
 <script src="js/router/routers.js"></script>
 <script src="js/controllers/board.controller.js"></script>
 <script src="js/controllers/generic-crud.controller.js"></script>
-<script src="js/directives/biblio-wrapper.directive.js"></script>
+<script src="js/directives/wrapper.directive.js"></script>
 <script src="js/components/crud-persona.component.js"></script>
 <script src="js/components/crud-encuesta.component.js"></script>
 <script src="js/components/crud-periodo.component.js"></script>
+<script src="js/components/update-insert-modal.component.js"></script>
 </body>
 </html>
