--- a/frontend/index.html
+++ b/frontend/index.html
@@ -22,6 +22,9 @@
 <script src="js/controllers/board.controller.js"></script>
 <script src="js/controllers/generic-crud.controller.js"></script>
 <script src="js/directives/wrapper.directive.js"></script>
+<script src="js/components/field-error.component.js"></script>
+<script src="js/components/field-select.component.js"></script>
+<script src="js/components/remove.component.js"></script>
 <script src="js/components/crud-persona.component.js"></script>
 <script src="js/components/crud-encuesta.component.js"></script>
 <script src="js/components/crud-periodo.component.js"></script>
