--- a/frontend/index.html
+++ b/frontend/index.html
@@ -28,6 +28,7 @@
 <script src="js/components/crud-persona.component.js"></script>
 <script src="js/components/crud-encuesta.component.js"></script>
 <script src="js/components/crud-periodo.component.js"></script>
+<script src="js/components/crud-dispositivo.component.js"></script>
 <script src="js/components/update-insert-modal.component.js"></script>
 </body>
 </html>
