--- a/frontend/index.html
+++ b/frontend/index.html
@@ -17,6 +17,8 @@
 <script src="node_modules/angular-ui-router/release/angular-ui-router.js"></script>
 <script src="node_modules/angular-material-data-table/dist/md-data-table.js"></script>
 <script src="node_modules/angular-cookies/angular-cookies.js"></script>
+<script src="node_modules/custom-input/dist/custom-input.js"></script>
+<script src="node_modules/angular-datetime-input/dist/datetime.js"></script>
 <script src="js/app.js"></script>
 <script src="js/router/routers.js"></script>
 <script src="js/controllers/board.controller.js"></script>
@@ -31,6 +33,7 @@
 <script src="js/components/crud-periodo.component.js"></script>
 <script src="js/components/crud-dispositivo.component.js"></script>
 <script src="js/components/crud-horario.component.js"></script>
+<script src="js/components/crud-registro.component.js"></script>
 
 </body>
 </html>
